# pokerstove

./: .gitignore
.github/workflows/: cmake-build-test.yml
build-review/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-review/Testing/Temporary/: CTestCostData.txt
build-review/src/ext/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-review/src/ext/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-review/src/ext/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-review/src/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-review/src/lib/pokerstove/penum/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-review/src/lib/pokerstove/peval/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-review/src/lib/pokerstove/util/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-review/src/programs/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-review/src/programs/ps-colex/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-review/src/programs/ps-eval/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-review/src/programs/ps-lut/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/lib/pokerstove/penum/: CMakeLists.txt  CardDistribution.test.cpp  GoldenVectors.test.cpp  Odometer.test.cpp  PartitionEnumerator.test.cpp  ShowdownEnumerator.test.cpp  SimpleDeck.hpp  SimpleDeck.test.cpp
src/lib/pokerstove/peval/: CMakeLists.txt  Card.test.cpp  CardSet.cpp  CardSet.h  CardSet.test.cpp  GoldenVectors.test.cpp  OmahaEightHandEvaluator.test.cpp  PokerEvaluation.test.cpp  PokerHand.test.cpp  PokerHandEvaluation.test.cpp  PokerHandEvaluator.cpp  PokerHandEvaluator.h  PokerHandEvaluator.test.cpp  PokerHandEvaluator_Alloc.cpp  SpecializedHandEvaluators.test.cpp  UniversalHandEvaluator.test.cpp
src/lib/pokerstove/test/: GoldenTestUtils.h
src/lib/pokerstove/util/: CMakeLists.txt  combinations.test.cpp
src/lib/testdata/: penum.golden  peval.golden
src/programs/ps-eval/: AssertCommandFails.cmake  AssertCommandSucceeds.cmake  CMakeLists.txt  main.cpp
